# TensorRT_yolox_s

./: CMakeLists.txt  README.md  calibrator.cpp  calibrator.h  cmake.txt  gen_wts.py  yolox.cpp
vscode/: c_cpp_properties.json  launch.json  settings.json
